# wordle-gear-academy

./: Cargo.toml
game-session/: Cargo.toml  build.rs
game-session/game-session/: Cargo.toml  build.rs
game-session/game-session/io/: Cargo.toml
game-session/io/: Cargo.toml
game-session/io/src/: lib.rs
game-session/src/: lib.rs
game-session/tsets/: basic.rs
game-session/wordle/: Cargo.toml
game-session/wordle/io/src/: lib.rs
game-session/wordle/src/: lib.rs
src/: lib.rs
tests/: basic.rs
wordle/: Cargo.toml  build.rs
wordle/io/: Cargo.toml
wordle/io/src/: lib.rs
wordle/src/: lib.rs
